more refactoring and small bug fixes

--- a/applications/satmini/motivationcvx.ipynb
+++ b/applications/satmini/motivationcvx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "87d81a13-7520-4ee9-984d-f9f0877e24c6",
    "metadata": {
     "execution": {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1126d1b8-f6e0-4b4d-b519-f20810b60705",
    "metadata": {
     "execution": {
@@ -52,22 +52,16 @@
     {
      "data": {
       "text/plain": [
-       "15300.924351485446"
+       "15300.9243514855"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = cp.Variable(pos=True)\n",
-    "Pb = cp.Variable(pos=True)\n",
-    "Pc = cp.Variable(pos=True)\n",
-    "D = cp.Variable(pos=True)\n",
-    "h = cp.Variable(pos=True)\n",
-    "C = cp.Variable(pos=True)\n",
-    "R = cp.Variable(pos=True)\n",
+    "A, Pb, Pc, D, h, C, R = cp.Variable(7, pos=True) \n",
     "\n",
     "objective_fn = 2500*D**2+12000*(A+1)+100*Pb\n",
     "constraints = [\n",
@@ -86,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "f894ac27-6288-403d-b6fc-848f0ffb4db3",
    "metadata": {
     "execution": {
@@ -102,16 +96,16 @@
     {
      "data": {
       "text/plain": [
-       "(0.04080478132843842, 0.04080482220110736)"
+       "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "((Pb+Pc)/483.307).value, A.value"
+    "np.isclose(((Pb+Pc)/483.307).value, A.value)"
    ]
   },
   {
@@ -124,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "e67b96f2-7d8a-47eb-9736-3273a0893158",
    "metadata": {
     "execution": {
@@ -137,12 +131,12 @@
    },
    "outputs": [],
    "source": [
-    "from compute import prettyprintval"
+    "from modeling.compute import prettyprintval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "b27d7d67-75ce-4149-a65a-b9ff508559c6",
    "metadata": {
     "execution": {
@@ -156,61 +150,39 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "</style>\n",
-       "<table id=\"T_ebb1d\">\n",
-       "  <thead>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td id=\"T_ebb1d_row0_col0\" class=\"data row0 col0\" >$$A$$</td>\n",
-       "      <td id=\"T_ebb1d_row0_col1\" class=\"data row0 col1\" >0.041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_ebb1d_row1_col0\" class=\"data row1 col0\" >$$D$$</td>\n",
-       "      <td id=\"T_ebb1d_row1_col1\" class=\"data row1 col1\" >0.67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_ebb1d_row2_col0\" class=\"data row2 col0\" >$$h$$</td>\n",
-       "      <td id=\"T_ebb1d_row2_col1\" class=\"data row2 col1\" >4.000×10⁵</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_ebb1d_row3_col0\" class=\"data row3 col0\" >$$P_{comms}$$</td>\n",
-       "      <td id=\"T_ebb1d_row3_col1\" class=\"data row3 col1\" >2.847</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_ebb1d_row4_col0\" class=\"data row4 col0\" >$$P_{bus}$$</td>\n",
-       "      <td id=\"T_ebb1d_row4_col1\" class=\"data row4 col1\" >16.874</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td id=\"T_ebb1d_row5_col0\" class=\"data row5 col0\" >$$C$$</td>\n",
-       "      <td id=\"T_ebb1d_row5_col1\" class=\"data row5 col1\" >1.530×10⁴</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x16336180f40>"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Variable      Value\n",
+      "0          $$A$$      0.041\n",
+      "1          $$D$$       0.67\n",
+      "2          $$h$$  4.000×10⁵\n",
+      "3  $$P_{comms}$$      2.847\n",
+      "4    $$P_{bus}$$     16.874\n",
+      "5          $$C$$  1.530×10⁴\n"
+     ]
     }
    ],
    "source": [
     "variables = {'$$A$$':A, '$$D$$':D, '$$h$$':h, '$$P_{comms}$$':Pc, '$$P_{bus}$$':Pb, '$$C$$':problem.objective}\n",
-    "pd.DataFrame([(var_name, prettyprintval(var.value)) for var_name,var in variables.items()]).style.hide(axis=\"columns\").hide(axis=\"index\")"
+    "formatted_vars = [(var_name, prettyprintval(var.value)) for var_name,var in variables.items()]\n",
+    "print(pd.DataFrame(formatted_vars, columns=['Variable', 'Value']))\n",
+    "# # Initialize the markdown table with headers\n",
+    "# md_string = \"| Variable | Value |\\n\"\n",
+    "# md_string += \"|----------|-------|\\n\"\n",
+    "\n",
+    "# # Add rows for each variable in the dictionary\n",
+    "# for var, value in formatted_vars:\n",
+    "#     md_string += f\"| {var} | {value} |\\n\"\n",
+    "# display(Markdown(md_string))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-mdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
