--- a/applications/sellar/gen3/sellar.ipynb
+++ b/applications/sellar/gen3/sellar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "id": "e336401a-88b1-4773-9224-8b53e59c4b13",
    "metadata": {
     "execution": {
@@ -16,81 +16,24 @@
    },
    "outputs": [],
    "source": [
-    "from graphutils import draw_graph_graphical_props, flat_graph_formulation, Node, VAR, COMP, SOLVER, merge_edges, sources\n",
-    "from graphutils import nested_sources, all_variables, edges_to_Ein_Eout\n",
-    "from nestedgraph import build_typedgraph\n",
-    "from compute import Var\n",
-    "from api import Model, adda, addf, addsolver, setsolvefor, addobj, addineq\n",
-    "from execution import edges_from_components, generate_components_and_residuals, Component\n",
-    "from operators import sort_scc, reorder_merge_solve\n",
-    "from nestedgraph import build_typedgraph\n",
-    "from workflow import get_f, implicit_comp_name, SOLVE, OPT, EQ, NEQ, OBJ, IMPL, EXPL, order_from_tree, ENDCOMP, default_solver_options\n",
-    "from workflow import order_from_tree, default_solver_options, mdao_workflow, namefromid\n",
-    "from workflow_mdao import mdao_workflow_with_args\n",
-    "from assembly import architecture_mappings, buildidpvars, build_archi\n",
-    "from runpipeline import nestedform_to_mdao"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "37516d35-9368-4db2-a6b2-de63b8304ea7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T17:37:09.306673Z",
-     "iopub.status.busy": "2022-05-02T17:37:09.306673Z",
-     "iopub.status.idle": "2022-05-02T17:37:09.321149Z",
-     "shell.execute_reply": "2022-05-02T17:37:09.320648Z",
-     "shell.execute_reply.started": "2022-05-02T17:37:09.306673Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import openmdao.api as om"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "9eeb1eee-c015-457d-bea8-22a474c3b176",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T17:37:09.322151Z",
-     "iopub.status.busy": "2022-05-02T17:37:09.322151Z",
-     "iopub.status.idle": "2022-05-02T17:37:09.336671Z",
-     "shell.execute_reply": "2022-05-02T17:37:09.336159Z",
-     "shell.execute_reply.started": "2022-05-02T17:37:09.322151Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import autograd.numpy as anp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d551ec33-c3b4-423f-a64b-cad382489eb1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T17:37:09.338151Z",
-     "iopub.status.busy": "2022-05-02T17:37:09.337653Z",
-     "iopub.status.idle": "2022-05-02T17:37:09.352648Z",
-     "shell.execute_reply": "2022-05-02T17:37:09.351649Z",
-     "shell.execute_reply.started": "2022-05-02T17:37:09.338151Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "from graph.graphutils import flat_graph_formulation, VAR, COMP, SOLVER\n",
+    "from graph.graphutils import all_variables, edges_to_Ein_Eout, namefromid\n",
+    "from modeling.compute import Var\n",
+    "from modeling.gen2.execution import edges_from_components\n",
+    "from modeling.gen2.transformations import generate_components_and_residuals\n",
+    "from modeling.gen3.nesting import Model, adda, addf, setsolvefor\n",
+    "from graph.operators import sort_scc, reorder_merge_solve\n",
+    "from graph.workflow import get_f, OPT, NEQ, OBJ, order_from_tree, default_solver_options, mdao_workflow\n",
+    "from solver.workflow_mdao import mdao_workflow_with_args\n",
+    "from solver.assembly import build_archi\n",
+    "from solver.runpipeline import nestedform_to_mdao\n",
+    "import openmdao.api as om\n",
     "from sympy import exp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "9a1938cd-7ad2-4748-ad60-5c9ab95573c9",
    "metadata": {
     "execution": {
@@ -109,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "id": "2cf5f6bd-ebbb-46de-98c2-43070bda5371",
    "metadata": {
     "execution": {
@@ -136,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "id": "781d6bce-28c9-482b-94c6-b8299a0765b7",
    "metadata": {
     "execution": {
@@ -156,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "4fddaf2e-b411-46d4-838a-21270e2a8ba0",
    "metadata": {
     "execution": {
@@ -174,8 +117,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce65328a",
+   "metadata": {},
+   "source": [
+    "### OpenMDAO prob structure 1)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "id": "2ef307b1-a099-4fae-a7b9-9103ca8681ca",
    "metadata": {
     "execution": {
@@ -214,27 +165,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "6bf98729-20a5-450e-b77f-3e5b3a240cdb",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T17:38:33.906837Z",
-     "iopub.status.busy": "2022-05-02T17:38:33.905840Z",
-     "iopub.status.idle": "2022-05-02T17:38:33.913921Z",
-     "shell.execute_reply": "2022-05-02T17:38:33.913921Z",
-     "shell.execute_reply.started": "2022-05-02T17:38:33.906837Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "b8532c46",
+   "metadata": {},
    "source": [
-    "namingfunc = namefromid(nodetyperepr)"
+    "### OpenMDAO prob structure 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "7c9e4f85-a1ed-43b0-9989-19e1948f925e",
    "metadata": {
     "execution": {
@@ -254,56 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "92f5062b-87a4-4dc5-ba28-2443886ee418",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T17:38:34.274532Z",
-     "iopub.status.busy": "2022-05-02T17:38:34.273535Z",
-     "iopub.status.idle": "2022-05-02T17:38:34.291530Z",
-     "shell.execute_reply": "2022-05-02T17:38:34.291530Z",
-     "shell.execute_reply.started": "2022-05-02T17:38:34.274532Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "nedges, ntree = reorder_merge_solve(edges, tree, merge_order, 1, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "7ce404d2-e7e8-4e8a-9d3c-e7294397448b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T17:38:34.456584Z",
-     "iopub.status.busy": "2022-05-02T17:38:34.456584Z",
-     "iopub.status.idle": "2022-05-02T17:38:34.463593Z",
-     "shell.execute_reply": "2022-05-02T17:38:34.463593Z",
-     "shell.execute_reply.started": "2022-05-02T17:38:34.456584Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "sequence = order_from_tree(ntree[0], ntree[1], nedges[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "c08016e7-c647-4cc1-82c6-b6087f53bbf6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T17:38:34.609000Z",
-     "iopub.status.busy": "2022-05-02T17:38:34.609000Z",
-     "iopub.status.idle": "2022-05-02T17:38:34.620978Z",
-     "shell.execute_reply": "2022-05-02T17:38:34.620978Z",
-     "shell.execute_reply.started": "2022-05-02T17:38:34.609000Z"
-    },
-    "tags": []
-   },
+   "execution_count": 8,
+   "id": "ab96a685",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -314,18 +207,20 @@
        " (ENDCOMP, [3, 5, 4], 1)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "nedges, ntree = reorder_merge_solve(edges, tree, merge_order, 1, True)\n",
+    "sequence = order_from_tree(ntree[0], ntree[1], nedges[1])\n",
     "sequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "9be05c12-27e5-422c-9a69-fea46f1db6fd",
    "metadata": {
     "execution": {
@@ -397,6 +292,25 @@
    "outputs": [],
    "source": [
     "lookup_f = get_f(components, nedges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6bf98729-20a5-450e-b77f-3e5b3a240cdb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-05-02T17:38:33.906837Z",
+     "iopub.status.busy": "2022-05-02T17:38:33.905840Z",
+     "iopub.status.idle": "2022-05-02T17:38:33.913921Z",
+     "shell.execute_reply": "2022-05-02T17:38:33.913921Z",
+     "shell.execute_reply.started": "2022-05-02T17:38:33.906837Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "namingfunc = namefromid(nodetyperepr)"
    ]
   },
   {
@@ -789,9 +703,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-mdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -803,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
