--- a/minimdo/presolver/al_inputopt.ipynb
+++ b/minimdo/presolver/al_inputopt.ipynb
@@ -5,198 +5,41 @@
    "id": "762b53b5",
    "metadata": {},
    "source": [
-    "Formerly called minreverse\n",
-    "\n",
-    "checkout multioutvar.ipynb"
+    "Formerly called minreverse"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5820d727",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-28T09:53:12.115225Z",
-     "iopub.status.busy": "2021-07-28T09:53:12.115225Z",
-     "iopub.status.idle": "2021-07-28T09:53:12.165220Z",
-     "shell.execute_reply": "2021-07-28T09:53:12.163219Z",
-     "shell.execute_reply.started": "2021-07-28T09:53:12.115225Z"
-    }
-   },
+   "id": "c8759526",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import gurobipy as gp\n",
-    "from gurobipy import GRB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "a077b393",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-28T09:53:12.169222Z",
-     "iopub.status.busy": "2021-07-28T09:53:12.169222Z",
-     "iopub.status.idle": "2021-07-28T09:53:19.557231Z",
-     "shell.execute_reply": "2021-07-28T09:53:19.556229Z",
-     "shell.execute_reply.started": "2021-07-28T09:53:12.169222Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unable to import mpi4py. Parallel processing unavailable.\n",
-      "Unable to import petsc4py. Parallel processing unavailable.\n",
-      "Unable to import petsc4py. Parallel processing unavailable.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from compute import Var, eqvar, Evaluable, ureg, coupled_run, buildidpvars, Impcomp\n",
-    "from inputresolver import reassigneq, eqvars, eqsonly, default_out, mdf_order, getdofs, idx_eqlist, getallvars, invert_edges, var_matched_cons\n",
-    "from inputresolver import reassign\n",
-    "from compute_utils import get_outputs, check_eqs\n",
-    "from representations import bipartite_repr, drawbipartite, digraph_repr\n",
-    "import openmdao.api as om\n",
-    "import sympy as sp\n",
-    "import networkx as nx\n",
-    "from functools import reduce"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5546da58",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-28T09:53:19.561235Z",
-     "iopub.status.busy": "2021-07-28T09:53:19.560231Z",
-     "iopub.status.idle": "2021-07-28T09:53:19.589228Z",
-     "shell.execute_reply": "2021-07-28T09:53:19.587229Z",
-     "shell.execute_reply.started": "2021-07-28T09:53:19.561235Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class Impcomp(om.ImplicitComponent):\n",
-    "    def initialize(self):\n",
-    "        self.options.declare('equation')\n",
-    "        self.options.declare('output_name')\n",
-    "        \n",
-    "    def setup(self):\n",
-    "        equation = self.options['equation']\n",
-    "        output_name = self.options['output_name']\n",
-    "        self.add_output(output_name)\n",
-    "        original_inputs = [inp for inp in equation.input_names if inp != output_name]\n",
-    "        for name in original_inputs:\n",
-    "            self.add_input(name, val=1.) # add them in the order we lambdify\n",
-    "        self.declare_partials(output_name, equation.input_names)\n",
-    "\n",
-    "    def apply_nonlinear(self, inputs, outputs, residuals):\n",
-    "        equation = self.options['equation']\n",
-    "        output_name = self.options['output_name']\n",
-    "        residuals[output_name] = equation.evaldict({**inputs, **outputs})\n",
-    "        \n",
-    "    def linearize(self, inputs, outputs, partials):\n",
-    "        equation = self.options['equation']\n",
-    "        output_name = self.options['output_name']\n",
-    "        J = equation.graddict({**inputs, **outputs})\n",
-    "        for idx, input_name in enumerate(equation.input_names):\n",
-    "            partials[output_name, input_name] = J[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "8c904194",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T14:44:48.047706Z",
-     "iopub.status.busy": "2021-07-26T14:44:48.046704Z",
-     "iopub.status.idle": "2021-07-26T14:44:48.090273Z",
-     "shell.execute_reply": "2021-07-26T14:44:48.089273Z",
-     "shell.execute_reply.started": "2021-07-26T14:44:48.047706Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(b, c + 1)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from modeling.compute import Var\n",
+    "from modeling.gen1.compute import Evaluable\n",
+    "a,b,c,d = Var('a'), Var('b'), Var('c'), Var('d')\n",
+    "eqlist = [(b,c+1),(a,b-2),(a,2*d+3)]\n",
+    "eqs = {idx: eq for idx, eq in enumerate(eqlist)}\n",
     "eq = eqlist[0]\n",
-    "eq"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "983a13c2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T14:44:48.675278Z",
-     "iopub.status.busy": "2021-07-26T14:44:48.675278Z",
-     "iopub.status.idle": "2021-07-26T14:44:48.692276Z",
-     "shell.execute_reply": "2021-07-26T14:44:48.691275Z",
-     "shell.execute_reply.started": "2021-07-26T14:44:48.675278Z"
-    }
-   },
-   "outputs": [],
-   "source": [
     "ev = Evaluable.fromsympy(eq[0]-eq[1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "5629fa2c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T14:44:49.590404Z",
-     "iopub.status.busy": "2021-07-26T14:44:49.590404Z",
-     "iopub.status.idle": "2021-07-26T14:44:49.602931Z",
-     "shell.execute_reply": "2021-07-26T14:44:49.601936Z",
-     "shell.execute_reply.started": "2021-07-26T14:44:49.590404Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['c', 'b']"
-      ]
-     },
-     "execution_count": 73,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 2,
+   "id": "4fad70b1",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "ev.input_names"
+    "import openmdao.api as om\n",
+    "from problemgen.gen1.openmdao import Impcomp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "60c3d1d1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T14:45:38.996114Z",
-     "iopub.status.busy": "2021-07-26T14:45:38.995114Z",
-     "iopub.status.idle": "2021-07-26T14:45:39.039637Z",
-     "shell.execute_reply": "2021-07-26T14:45:39.038637Z",
-     "shell.execute_reply.started": "2021-07-26T14:45:38.996114Z"
-    }
-   },
+   "execution_count": 3,
+   "id": "46bcae7b",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -224,151 +67,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b1fdabac",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:21:16.772046Z",
-     "iopub.status.busy": "2021-07-26T13:21:16.771048Z",
-     "iopub.status.idle": "2021-07-26T13:21:16.793044Z",
-     "shell.execute_reply": "2021-07-26T13:21:16.792044Z",
-     "shell.execute_reply.started": "2021-07-26T13:21:16.772046Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "a = Var('a')\n",
-    "b = Var('b')\n",
-    "c = Var('c')\n",
-    "d = Var('d')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "5b03f47d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:21:18.149046Z",
-     "iopub.status.busy": "2021-07-26T13:21:18.148045Z",
-     "iopub.status.idle": "2021-07-26T13:21:18.408045Z",
-     "shell.execute_reply": "2021-07-26T13:21:18.407042Z",
-     "shell.execute_reply.started": "2021-07-26T13:21:18.149046Z"
-    }
-   },
+   "id": "f33c5119",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "eqlist = [(b,c+1),(a,b-2),(a,2*d+3)]"
+    "from trash.inputresolver import eqvars, default_out, getallvars, var_matched_cons, invert_edges\n",
+    "from graph.graphview import bipartite_repr"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "660e1d73",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:21:32.782514Z",
-     "iopub.status.busy": "2021-07-26T13:21:32.781517Z",
-     "iopub.status.idle": "2021-07-26T13:21:32.792515Z",
-     "shell.execute_reply": "2021-07-26T13:21:32.791511Z",
-     "shell.execute_reply.started": "2021-07-26T13:21:32.782514Z"
-    }
-   },
+   "id": "dc86549a",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "eqs = idx_eqlist(eqlist)\n",
-    "eqv = eqvars(eqs)"
+    "dout = default_out(eqs)\n",
+    "vrs = getallvars(eqs)\n",
+    "eqns = eqs.keys()\n",
+    "eqv = eqvars(eqs)\n",
+    "G, edges_original = bipartite_repr(eqv)\n",
+    "edges = invert_edges(edges_original)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "03eb5f79",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:59:26.804939Z",
-     "iopub.status.busy": "2021-07-26T13:59:26.804939Z",
-     "iopub.status.idle": "2021-07-26T13:59:26.856936Z",
-     "shell.execute_reply": "2021-07-26T13:59:26.855933Z",
-     "shell.execute_reply.started": "2021-07-26T13:59:26.804939Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: (b, c + 1), 1: (a, b - 2), 2: (a, 2*d + 3)}"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eqs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "90994f1a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:21:49.496384Z",
-     "iopub.status.busy": "2021-07-26T13:21:49.496384Z",
-     "iopub.status.idle": "2021-07-26T13:21:49.509908Z",
-     "shell.execute_reply": "2021-07-26T13:21:49.508913Z",
-     "shell.execute_reply.started": "2021-07-26T13:21:49.496384Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{0: {b, c}, 1: {a, b}, 2: {a, d}}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "eqv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "c46accc1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:21:59.101212Z",
-     "iopub.status.busy": "2021-07-26T13:21:59.101212Z",
-     "iopub.status.idle": "2021-07-26T13:21:59.119744Z",
-     "shell.execute_reply": "2021-07-26T13:21:59.118777Z",
-     "shell.execute_reply.started": "2021-07-26T13:21:59.101212Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "dout = default_out(eqs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "042bbfc3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:22:02.987319Z",
-     "iopub.status.busy": "2021-07-26T13:22:02.986323Z",
-     "iopub.status.idle": "2021-07-26T13:22:02.995317Z",
-     "shell.execute_reply": "2021-07-26T13:22:02.994319Z",
-     "shell.execute_reply.started": "2021-07-26T13:22:02.987319Z"
-    }
-   },
+   "execution_count": 19,
+   "id": "b2774380",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -376,7 +103,7 @@
        "{0: b, 1: a, 2: a}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,28 +114,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "480954d5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-07-26T13:26:36.893583Z",
-     "iopub.status.busy": "2021-07-26T13:26:36.893583Z",
-     "iopub.status.idle": "2021-07-26T13:26:36.908587Z",
-     "shell.execute_reply": "2021-07-26T13:26:36.907641Z",
-     "shell.execute_reply.started": "2021-07-26T13:26:36.893583Z"
+   "execution_count": 17,
+   "id": "8ed1b55a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, b), (0, c), (1, a), (1, b), (2, a), (2, d)]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "G, edges_original = bipartite_repr(eqv)\n",
-    "vrs = getallvars(eqs)\n",
-    "eqns = eqs.keys()\n",
-    "edges = invert_edges(edges_original)"
+    "edges = [(0, b), (0, c), (1, a), (1, b), (2, a), (2, d)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
+   "id": "5820d727",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-07-28T09:53:12.115225Z",
+     "iopub.status.busy": "2021-07-28T09:53:12.115225Z",
+     "iopub.status.idle": "2021-07-28T09:53:12.165220Z",
+     "shell.execute_reply": "2021-07-28T09:53:12.163219Z",
+     "shell.execute_reply.started": "2021-07-28T09:53:12.115225Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "dc239eba",
    "metadata": {
     "execution": {
@@ -427,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "877f931f",
    "metadata": {
     "execution": {
@@ -438,16 +184,48 @@
      "shell.execute_reply.started": "2021-07-26T13:42:43.451451Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter WLSAccessID\n",
+      "Set parameter WLSSecret\n",
+      "Set parameter LicenseID to value 2527862\n",
+      "Academic license 2527862 - for non-commercial use only - registered to no___@mit.edu\n"
+     ]
+    }
+   ],
    "source": [
     "m = gp.Model('minrevassign')\n",
-    "m.setParam('OutputFlag', False )\n",
+    "m.setParam('OutputFlag', False)\n",
     "x = m.addVars(edges, name=\"assign\", vtype=GRB.BINARY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
+   "id": "74dc8bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, b), (0, c), (1, a), (1, b), (2, a), (2, d)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "5f7aa86c",
    "metadata": {
     "execution": {
@@ -464,12 +242,13 @@
     "fcons = m.addConstrs((x.sum(j,'*') == 1 for j in eqns), name='equations')\n",
     "varcons = m.addConstrs((var_matched_cons(x, j, not_input) for j in vrs), name='variables')\n",
     "m.setObjective(gp.quicksum([x[(key, var)] for key,var in dout.items()]), GRB.MAXIMIZE)\n",
+    "# Elimination\n",
     "#m.addConstr(gp.quicksum(x[(r,j)] for r,j in sol)<= n_eqs-1) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "09745433",
    "metadata": {
     "execution": {
@@ -487,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "02a62a7f",
    "metadata": {
     "execution": {
@@ -505,7 +284,7 @@
        "2.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "58d47e82",
    "metadata": {
     "execution": {
@@ -534,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "id": "e21b3dfa",
    "metadata": {
     "execution": {
@@ -552,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "id": "b709d7e3",
    "metadata": {
     "execution": {
@@ -570,7 +349,7 @@
        "{0: b, 1: a, 2: d}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,9 +361,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mdo]",
+   "display_name": "minimdo",
    "language": "python",
-   "name": "conda-env-mdo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -596,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
