--- a/minimdo/trash/ds_tree.ipynb
+++ b/minimdo/trash/ds_tree.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
-    "from utils.testproblems import generate_random_prob\n",
+    "from utils.randomstructure import generate_random_prob\n",
     "from graph.graphview import digraph_repr, draw\n",
     "from copy import deepcopy"
    ]
